--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,9 +22,11 @@
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
     "react": "^18.2.0",
