--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -14,6 +14,7 @@
     "@repo/api-client": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^5.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
