--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -13,17 +13,17 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external @supabase/supabase-js --out-dir dist --metafile --sourcemap",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external @supabase/supabase-js --external @repo/types --out-dir dist --metafile --sourcemap",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts --report-unused-disable-directives --max-warnings 0",
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
+    "@repo/types": "workspace:*",
     "@supabase/supabase-js": "^2.33.1"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
-    "@repo/types": "workspace:*",
     "eslint": "^8.45.0",
     "tsup": "^7.2.0",
     "typescript": "^5.0.2"
