--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -16,6 +16,7 @@
     "@repo/ui": "workspace:*",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^5.13.4",
+    "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
