chore(customer-pwa): configure path aliases and update imports

--- a/apps/customer-pwa/tsconfig.json
+++ b/apps/customer-pwa/tsconfig.json
@@ -8,6 +8,10 @@
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
