--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -19,7 +19,9 @@
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-hook-form": "^7.55.0",
+    "react-router-dom": "^6.20.1",
+    "sonner": "^2.0.3"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
