--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -16,12 +16,14 @@
     "@repo/ui": "workspace:*",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^5.13.4",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.20.1",
-    "sonner": "^2.0.3"
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
