--- a/apps/customer-pwa/tsconfig.json
+++ b/apps/customer-pwa/tsconfig.json
@@ -10,7 +10,10 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@repo/ui/*": ["../../packages/ui/src/*"],
+      "@repo/api-client/*": ["../../packages/api-client/src/*"],
+      "@repo/ui/components/ui/*": ["../../packages/ui/src/components/ui/*"]
     },
 
     /* Bundler mode */
