--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -16,6 +16,7 @@
     "@repo/ui": "workspace:*",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^5.13.4",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
