--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@repo/api-client": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
@@ -24,11 +25,13 @@
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.20.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "@types/google.maps": "^3.58.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
