--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.20.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
