feat(customer-pwa): refactor address management by consolidating Google Maps hooks and enhancing AddressForm with improved error handling and user feedback

--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@repo/api-client": "workspace:*",
+    "@repo/hooks": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@supabase/supabase-js": "^2.33.1",
