--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "mi-super-app-monorepo",
+  "name": "lasttrypls",
   "private": true,
-  "version": "0.0.0",
-  "description": "Monorepo para la Super App",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "turbo run dev --parallel",
     "build": "turbo run build",
+    "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "supabase:start": "cd supabase && supabase start",
-    "supabase:stop": "cd supabase && supabase stop",
-    "db:generate": "cd supabase && supabase gen types typescript --local > ../packages/types/src/database.types.ts",
-    "db:push": "cd supabase && supabase db push",
-    "db:reset": "cd supabase && supabase db reset"
+    "clean": "turbo run clean",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.37.5",
     "prettier": "^3.0.0",
-    "turbo": "latest"
+    "turbo": "^1.10.0"
   },
   "packageManager": "pnpm@8.6.0"
 }
