feat(api-client): enhance API client with new hooks for order management and update build configuration for improved module exports

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -10,10 +10,15 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./hooks": {
+      "import": "./dist/hooks/index.mjs",
+      "require": "./dist/hooks/index.js",
+      "types": "./dist/hooks/index.d.ts"
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external @supabase/supabase-js --external @repo/types --out-dir dist --metafile --sourcemap",
+    "build": "tsup src/index.ts src/hooks/index.ts --format esm,cjs --dts --external @supabase/supabase-js --external @repo/types --external @tanstack/react-query --out-dir dist --metafile --sourcemap",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts --report-unused-disable-directives --max-warnings 0",
     "clean": "rm -rf dist .turbo"
@@ -21,6 +26,18 @@
   "dependencies": {
     "@repo/types": "workspace:*",
     "@supabase/supabase-js": "^2.33.1"
+  },
+  "peerDependencies": {
+    "@tanstack/react-query": "^5.0.0",
+    "react": "^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@tanstack/react-query": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
