--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "prettier": "^3.0.0",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.6.0"
+  "packageManager": "pnpm@8.6.0",
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
+    "@tanstack/react-query": "^5.13.4",
+    "react": "^18.2.0",
+    "react-router-dom": "^6.20.1"
+  }
 }
