--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,13 +15,16 @@
     "./styles.css": "./dist/index.css"
   },
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react --external react-dom --out-dir dist --metafile --sourcemap && pnpm build:css",
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react --external react-dom --external @repo/api-client --out-dir dist --metafile --sourcemap && pnpm build:css",
     "build:css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -30,6 +33,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@repo/api-client": "workspace:*",
     "@repo/hooks": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -39,7 +43,8 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
