chore: update clean scripts to use rimraf for consistent directory removal across applications
- Replaced `rm -rf` commands with `rimraf` in package.json files for admin-panel, customer-pwa, driver-app, api-client, hooks, types, and ui packages.
- Removed obsolete database type definitions from the types package.
- Added new dependencies for rimraf in package.json and updated pnpm-lock.yaml accordingly.

--- a/apps/admin-panel/package.json
+++ b/apps/admin-panel/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint \"**/*.{ts,tsx}\" --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "preview": "vite preview",
-    "clean": "rm -rf dist .turbo"
+    "clean": "rimraf dist .turbo"
   },
   "dependencies": {
     "react": "^18.2.0",
