--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -19,7 +19,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --metafile --sourcemap",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf dist .turbo"
+    "clean": "rimraf dist .turbo"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
