--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -17,7 +17,7 @@
     "build": "vite build",
     "dev": "vite build --watch",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf .turbo dist"
+    "clean": "rimraf dist .turbo"
   },
   "dependencies": {
     "react": "^18.2.0",
