--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,7 @@
     "build:css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf dist .turbo"
+    "clean": "rimraf dist .turbo"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -51,6 +51,7 @@
     "@types/google.maps": "^3.55.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "postcss": "^8.4.29",
@@ -58,6 +59,8 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "tsup": "^7.2.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.9.1"
   }
 }
