feat(customer-pwa): refactor component imports and enhance Vite configuration for improved module resolution
- Updated Vite configuration to include path aliases for better module resolution.
- Refactored component imports across the application to use specific paths for UI components, improving clarity and maintainability.
- Enhanced the AddressForm, ProfileForm, and various layout components to utilize the new import structure.
- Added new fields to the OrderInsert interface in the API client for expanded order management capabilities.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -10,13 +10,10 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./database": {
-      "types": "./src/database.types.ts"
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --metafile --sourcemap",
+    "build": "tsup src/index.ts --format esm,cjs --out-dir dist --metafile --sourcemap && pnpm tsc --project tsconfig.build.json",
     "dev": "pnpm build --watch",
     "lint": "eslint src/ --ext .ts --report-unused-disable-directives --max-warnings 0",
     "clean": "rimraf dist .turbo"
