--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -20,10 +20,13 @@
     "@tanstack/react-query": "^5.13.4",
     "@vis.gl/react-google-maps": "^1.5.2",
     "clsx": "^2.0.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^6.20.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.0.0",
