--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.13.4",
     "react": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "@repo/i18n": "workspace:*"
   }
 }
