feat(customer-pwa): enhance internationalization with i18next integration and new translations
- Integrated i18next and react-i18next for improved internationalization support across the application.
- Added i18next-http-backend for loading translations dynamically and configured language detection.
- Updated various components, including AddressCard and AddressManager, to utilize translation keys for better localization.
- Refactored i18n configuration to streamline resource management and added debugging logs for easier troubleshooting.
- Removed outdated translation files and consolidated translation resources for English and Spanish.
- Enhanced user experience with loading states and improved language toggle functionality.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.359.0",
+    "react-i18next": "^14.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
