--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.0.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
