--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.13.4",
+    "class-variance-authority": "^0.7.0",
     "react": "^18.2.0",
     "react-router-dom": "^6.20.1"
   }
