fix(customer-pwa): update routing and address handling in components
- Adjusted routing paths in BottomNavBar, TopNavBar, and MainLayout for consistency.
- Enhanced App component to include active address handling and improved navigation logic.
- Updated ForceAddressModal to log state changes on successful address addition.
- Refactored AddressForm submission to include logging for better debugging.
- Improved address store initialization logging for clearer visibility into user state changes.

--- a/apps/customer-pwa/tsconfig.json
+++ b/apps/customer-pwa/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@repo/ui/*": ["../../packages/ui/src/*"],
-      "@repo/api-client/*": ["../../packages/api-client/src/*"],
+      "@repo/api-client/*": ["../../packages/api-client/*"],
       "@repo/ui/components/ui/*": ["../../packages/ui/src/components/ui/*"]
     },
 
