--- a/apps/customer-pwa/tsconfig.json
+++ b/apps/customer-pwa/tsconfig.json
@@ -13,7 +13,8 @@
       "@/*": ["./src/*"],
       "@repo/ui/*": ["../../packages/ui/src/*"],
       "@repo/api-client/*": ["../../packages/api-client/*"],
-      "@repo/ui/components/ui/*": ["../../packages/ui/src/components/ui/*"]
+      "@repo/ui/components/ui/*": ["../../packages/ui/src/components/ui/*"],
+      "@repo/i18n": ["../../packages/i18n/src/index.ts"]
     },
 
     /* Bundler mode */
