feat(i18n): update translation management and enhance i18n rule
- Updated pnpm-lock.yaml to reflect new versions of TypeScript and ESLint dependencies.
- Added a new rule for adding translation keys in the i18n package, including detailed instructions for implementation.
- Enhanced the i18n package by adding English and Spanish translation documentation.
- Updated package.json files to include new dependencies and scripts for validation and cleaning.
- Removed debug logs from i18n initialization to streamline the code.

--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@repo/api-client": "workspace:*",
     "@repo/hooks": "workspace:*",
     "@repo/types": "workspace:*",
