feat(customer-pwa): update dependencies and enhance address management
- Added '@repo/i18n' package to pnpm-lock.yaml and updated related paths in tsconfig.base.json.
- Refactored package.json files to update various dependencies, including '@tanstack/react-query', 'lucide-react', 'react-i18next', and 'react-router-dom' to their latest versions.
- Improved address management by integrating new API functions for adding and updating addresses, ensuring local state updates correctly.
- Streamlined imports across components to enhance maintainability and reduce redundancy.
- Removed unused hooks and optimized address store management for better performance.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,9 +14,14 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@lasttrypls/ui/*": ["packages/ui/src/*"],
-      "@lasttrypls/types/*": ["packages/types/src/*"],
-      "@lasttrypls/api-client/*": ["packages/api-client/src/*"]
+      "@repo/ui/*": ["packages/ui/src/*"],
+      "@repo/types/*": ["packages/types/src/*"],
+      "@repo/api-client/*": ["packages/api-client/src/*"],
+      "@repo/hooks/*": ["packages/hooks/src/*"],
+      "@repo/i18n": ["packages/i18n/src/index.ts"],
+      "@repo/tsconfig/*": ["packages/tsconfig/src/*"],
+      "@repo/typescript-config/*": ["packages/typescript-config/src/*"],
+      "@repo/eslint-config/*": ["packages/eslint-config/src/*"]
     }
   },
   "exclude": ["node_modules", "dist", ".turbo"]
