--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -17,30 +17,31 @@
     "@repo/hooks": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/i18n": "workspace:*",
     "@supabase/supabase-js": "^2.33.1",
-    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query": "^5.0.0",
     "@vis.gl/react-google-maps": "^1.5.2",
     "clsx": "^2.0.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "react-i18next": "^15.4.1",
-    "react-router-dom": "^6.20.1",
-    "sonner": "^2.0.3",
+    "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.22.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
-    "@tanstack/react-query-devtools": "^5.71.10",
+    "@tanstack/react-query-devtools": "^5.13.4",
     "@types/google.maps": "^3.58.1",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -50,7 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.0",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1"
   }
