--- a/apps/customer-pwa/tsconfig.json
+++ b/apps/customer-pwa/tsconfig.json
@@ -10,11 +10,7 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@repo/ui/*": ["../../packages/ui/src/*"],
-      "@repo/api-client/*": ["../../packages/api-client/*"],
-      "@repo/ui/components/ui/*": ["../../packages/ui/src/components/ui/*"],
-      "@repo/i18n": ["../../packages/i18n/src/index.ts"]
+      "@/*": ["./src/*"]
     },
 
     /* Bundler mode */
