--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -21,11 +21,13 @@
     "@tanstack/react-query": "^5.13.4",
     "@vis.gl/react-google-maps": "^1.5.2",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
