--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.13.4",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
     "react-router-dom": "^6.20.1"
   }
 }
