--- a/apps/customer-pwa/package.json
+++ b/apps/customer-pwa/package.json
@@ -27,10 +27,8 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
-    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "react-i18next": "^15.4.1",
     "react-router-dom": "^6.20.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.0.0",
@@ -41,8 +39,10 @@
     "@repo/tsconfig": "workspace:*",
     "@tanstack/react-query-devtools": "^5.71.10",
     "@types/google.maps": "^3.58.1",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.0",
+    "@types/react-day-picker": "^5.3.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-i18next": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -52,6 +52,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
+    "react-day-picker": "^9.6.7",
+    "react-i18next": "^15.4.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
