--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "async": "^3.2.6",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
@@ -28,8 +34,10 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
+    "postcss-value-parser": "^4.2.0",
     "prettier": "^3.0.0",
     "react-i18next": "^15.4.1",
+    "resolve": "^1.22.10",
     "rimraf": "^6.0.1",
     "turbo": "latest",
     "vite": "^4.4.5",
@@ -42,10 +50,13 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.13.4",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
     "react-router-dom": "^6.20.1"
   }
 }
