--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -12,7 +12,11 @@
     "sourceMap": true,
     "composite": true,
     "declarationDir": "dist/types",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
