--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -9,7 +9,8 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "baseUrl": ".",
     "paths": {
-      "@repo/*": ["../*/src"]
+      "@repo/*": ["../*/src"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
