chore(dependencies): update Vite, React Router, and related packages
- Upgraded `@vitejs/plugin-react` to version 4.2.1 and `vite` to version 4.5.13 for improved performance and compatibility.
- Updated `react-router-dom` to version 7.5.2, enhancing routing capabilities.
- Added `postcss` version 8.4.31 to ensure consistent styling processing across the project.
- Reflected these changes in the `package.json` files of multiple applications and packages, ensuring all dependencies are aligned.
- Cleaned up imports in `DeliveryTimeModal` to remove unused functions from `date-fns`, improving code clarity.

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-router-dom": "7.5.2",
     "sonner": "^2.0.3"
   },
   "devDependencies": {
@@ -33,11 +34,12 @@
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "8.4.31",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "^4.5.13",
     "vite-plugin-dts": "^4.5.3"
   }
 }
