--- a/apps/admin-panel/package.json
+++ b/apps/admin-panel/package.json
@@ -12,13 +12,13 @@
     "clean": "rimraf dist .turbo"
   },
   "dependencies": {
+    "@repo/api-client": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@tanstack/react-query": "^5.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "workspace:*",
-    "@repo/types": "workspace:*",
-    "@repo/api-client": "workspace:*",
-    "@tanstack/react-query": "^5.13.4",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
@@ -26,16 +26,16 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "globals": "^13.24.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-tsconfig-paths": "^4.2.1",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.29",
-    "autoprefixer": "^10.4.15"
+    "typescript": "^5.0.2",
+    "vite": "^4.5.13",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
