--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "async": "^3.2.6",
     "concurrently": "^9.1.2",
     "eslint": "^8.45.0",
@@ -35,13 +35,14 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
+    "postcss": "8.4.31",
     "postcss-value-parser": "^4.2.0",
     "prettier": "^3.0.0",
     "react-i18next": "^15.4.1",
     "resolve": "^1.22.10",
     "rimraf": "^6.0.1",
     "turbo": "latest",
-    "vite": "^4.4.5",
+    "vite": "^4.5.13",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "packageManager": "pnpm@8.6.0",
@@ -59,6 +60,6 @@
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.7",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^7.5.2"
   }
 }
