--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@repo/types": "workspace:*",
-    "@supabase/supabase-js": "^2.33.1"
+    "@supabase/supabase-js": "^2.33.1",
+    "react-router-dom": "7.5.2"
   },
   "peerDependencies": {
     "@tanstack/react-query": "^5.0.0",
@@ -41,8 +42,11 @@
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
+    "@vitejs/plugin-react": "4.2.1",
     "eslint": "^8.45.0",
+    "postcss": "8.4.31",
     "tsup": "^7.2.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "4.5.13"
   }
 }
