--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,8 +9,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "4.2.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "8.4.31",
+    "vite": "4.5.13"
+  },
+  "dependencies": {
+    "react-router-dom": "7.5.2"
   }
-} 
+}
