--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -6,5 +6,13 @@
     "base.json",
     "react-library.json",
     "nextjs.json"
-  ]
+  ],
+  "devDependencies": {
+    "@vitejs/plugin-react": "4.2.1",
+    "postcss": "8.4.31",
+    "vite": "4.5.13"
+  },
+  "dependencies": {
+    "react-router-dom": "7.5.2"
+  }
 }
