--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -20,8 +20,14 @@
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
+    "@vitejs/plugin-react": "4.2.1",
     "eslint": "^8.45.0",
+    "postcss": "8.4.31",
     "tsup": "^7.2.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "4.5.13"
+  },
+  "dependencies": {
+    "react-router-dom": "7.5.2"
   }
 }
