--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -5,5 +5,13 @@
   "files": [
     "base.json",
     "react-library.json"
-  ]
-} 
+  ],
+  "devDependencies": {
+    "@vitejs/plugin-react": "4.2.1",
+    "postcss": "8.4.31",
+    "vite": "4.5.13"
+  },
+  "dependencies": {
+    "react-router-dom": "7.5.2"
+  }
+}
